Moved the UI from Golang templates to Go-Bootstrap (https://github.com/pjotrscholtze/go-bootstrap)
